clusters/nonprod/pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nonprod
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
